# excel2_vqa

./: .gitignore  README.md  main.py  pyproject.toml  zaiko.xlsx  zaiko_v2.xlsx  フロー.md
lib/: __init__.py  answer_generator.py  config.py  element_detector.py  excel_renderer.py  formatters.py  question_generator.py  validators.py  vlm_backend.py
output_zaiko/: dataset_flat.jsonl  dataset_llava.json  dataset_sharegpt.json  vqa_dataset.json
output_zaiko_v2/: dataset_flat.jsonl  dataset_llava.json  dataset_sharegpt.json  vqa_dataset.json
